# arca

./: Cargo.toml  LICENSE  README.md  architecture.md  config.example.toml
public/: index.html  main.js  style.css
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/routes/: deploy.rs  echo.rs  logs.rs  middleware.rs  mod.rs
