[package]
name = "arca"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.8"
notify = "6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.4", features = ["derive"] }