[package]
name = "arca"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
toml = "0.8.14"
notify = "6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.4", features = ["derive"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
thiserror = "1.0"
tokio-util = { version = "0.7.16", features = ["codec"] }
futures-util = "0.3.31"
